# google-cloud-tutorial

./: .env.sample  .gitignore  README.md  pipeline.py  pyproject.toml  run.py
.devcontainer/: devcontainer.json
cloud_composer/: .gitignore  README.md  dag_sample.py
cloud_composer/infra/: main.tf  terraform.tfvars.example  variables.tf
cloud_run_jobs/: Dockerfile  README.md  main.py
vertex_ai_pipelines/: pipeline.py
